# locos

./: .gitignore  CODEOWNERS  Cargo.toml  Makefile  README.md  build.rs  limine.conf  rust-toolchain.toml
.github/workflows/: rust.yml
bootimage/: Cargo.toml
bootimage/src/: main.rs
custom-targets/: x86_64-unknown-none-no-pie.json
docs/: CI_KVM_SETUP.md
kernel/: Cargo.toml  Makefile  build.rs
kernel/.cargo/: config.toml
kernel/src/: console.rs  framebuffer.rs  gdt.rs  interrupts.rs  linewriter.rs  main.rs  memory.rs  meta.rs  output.rs  pci.rs  ps2.rs  serial.rs  shell.rs  syscall.rs  tasks.rs  testing.rs
kernel/src/interrupts/: apic.rs  idt.rs  pic.rs
kernel/src/memory/: alloc.rs  freelist.rs  paging.rs  tests.rs
kernel/src/output/: console.rs  flanconsole.rs  framebuffer.rs  linewriter.rs  macros.rs  tests.rs
kernel/src/pci/: config.rs  device.rs  dma.rs  mcfg.rs  msi.rs  nvme.rs  tests.rs  usb.rs  vmm.rs
kernel/src/pci/nvme/: commands.rs  controller.rs  mod.rs  registers.rs
kernel/src/pci/usb/: dcbaa.rs  init_helpers.rs  xhci.rs  xhci_registers.rs
kernel/src/ps2/: keyboard.rs
kernel/src/shell/: task.rs
kernel/src/tasks/: kernelslab.rs  scheduler.rs  testing.rs
ovmf/: ovmf-code-x86_64.fd  ovmf-vars-x86_64.fd
src/: main.rs
