[package]
name = 'bootimage'
version = '0.1.0'
edition = '2024'
authors = ['Mako', 'JayAndJef']

[[bin]]
name = 'bootimage'
path = 'src/main.rs'

[dependencies]
ovmf-prebuilt = '=0.1.0-alpha.1'

[build-dependencies]
bootloader = { git = 'https://github.com/rust-osdev/bootloader.git' }
kernel = { path = "../kernel", target = "x86_64-unknown-none", artifact = "bin"}
