[package]
name = 'kernel'
version = '0.1.0'
edition = '2024'
authors = ['Mako', 'JayAndJef']

[[bin]]
name = 'kernel'
path = "src/main.rs"
test = false
bench = false

[dependencies]
x2apic = "0.5.0"
acpi = "5.2.0"
limine = "0.4.0"
flanterm = "0.0.2"
log = { version = '0.4.22', default-features = false }
conquer-once = { version = '0.4.0', default-features = false }
spin = "0.9.8"
uart_16550 = "0.3.2"
"x86_64" = "0.15.2"
