[package]
name = 'kernel'
version = '0.1.0'
edition = '2024'
authors = ['Mako', 'JayAndJef']

[features]
default = []
log-trace = ["log-debug"]
log-debug = ["log-info"]
log-info = ["log-warn"]
log-warn = ["log-error"]
log-error = []

[[bin]]
name = 'kernel'
path = "src/main.rs"

[dependencies]
x2apic = "0.5.0"
acpi = "5.2.0"
limine = "0.5.0"
flanterm = "0.0.2"
conquer-once = { version = '0.4.0', default-features = false }
spin = "0.9.8"
uart_16550 = "0.3.2"
"x86_64" = "0.15.2"
